CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7)
PROJECT(AX_LZW_TEST)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pedantic")

SET(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG}   -O0 -g")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})

SET(SRC_LIST tests.cpp)
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${SRC_LIST})
